--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -401,7 +401,7 @@ body{
 article{
     width: 100%;
     padding: 20px;
-    padding-bottom: 40px;
+    padding-bottom: 80px;
     box-shadow: -10px 0 20px -30px black;
     position: relative;
     border-radius: 6px;
@@ -850,16 +850,19 @@ footer .redes-footer .fa-instagram:hover{
     font-weight: 400;
     margin-top: 20px;
     color: #fff;
-    text-shadow: #000000 ;
+    text-shadow: 5px 1px 7px rgb(0, 0, 0);
+
+    /** [1er px] a los lados, [2do px] arriba abajo, [3er px] opacidad, color **/
+
 }
 
 .card p{
-    margin-top: 20px;
+    margin-top: 10px;
     font-size: 14px;
     font-weight: 300;
     color: #fff;
     letter-spacing: 0.5px;
-    text-shadow: #000000 5px;
+    text-shadow: 5px 1px 7px rgb(0, 0, 0);
 }
 
 .card hr{
@@ -880,6 +883,7 @@ footer .redes-footer .fa-instagram:hover{
 .footer__card h3{
     font-size: 15px;
     font-weight: 500;
+    text-shadow: 5px 1px 7px rgb(0, 0, 0);
 }
 
 
@@ -1258,4 +1262,9 @@ footer .redes-footer .fa-instagram:hover{
    
    
    
+   }
+
+
+   .container__search{
+    margin-top: 80px;
    }
