--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -631,6 +631,81 @@ footer .redes-footer .fa-instagram:hover{
     }
 }
 
+/*BARRA MENU TELEFONO*/
+
+
+nav > ul{
+    height: 100%;
+    display: flex;
+    padding: 0;
+}
+
+nav ul li{
+    height: 100%;
+    list-style: none;
+    position: relative;
+}
+
+nav > ul > li:first-child > a{
+    background-image: url(../img/home.png);
+    background-size: 24px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    padding: 20px 40px;
+}
+
+nav > ul > li:first-child:hover > a{
+    background-image: url(../img/home.png);
+    background-size: 24px;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+nav > ul > li > a{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 14px;
+    color: white;
+    text-transform: uppercase;
+    font-size: 14px;
+    transition: all 300ms ease;
+}
+
+
+
+#selected{
+    transform: scale(1.1);
+    display: none;
+    background-color: #053305;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+}
+
+.icon__menu{
+    font-size: 20px;
+    color: white;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background: #777777;
+    border-radius: 50%;
+    padding: 5px 5px;
+    margin-top: 50%;
+}
+
+#label__check{
+    width: 26px;
+    height: 100%;
+    display: none;
+}
+
+#check__menu{
+    display: none;
+}
 
 
 @media screen and (max-width: 800px){
@@ -644,67 +719,152 @@ footer .redes-footer .fa-instagram:hover{
         transform: translateX(300px);
     }
 
-    .show-lateral{
-        width: 350px;
-        transform: translateX(0px);
-    }
-
-
-    .menu{
-        width: 0px;
-        height: 100vh;
-        position: fixed;
-        top: 80px;
-        left: 0;
-        background: #fff;
-        overflow: hidden;
-        transform: translateX(-350px);
-        box-shadow: 10px 0 20px -25px black;
-        transition: all 300ms;
-    }
-
-
-    .menu nav ul{
-        flex-direction: column;
-
-    }
-
-    .menu nav ul li{
-        max-width: 200px;
-        height: 50px;
-        justify-content: flex-start;
-
-    }
-
-    .menu-selected:before{
-        width: 0;
-
-    }
-
-    .menu nav ul li a{
-        margin-top: 40px;
-        color: #858585;
-        
-    }
-
-    .menu nav ul li a i{
-        width: 20px;
-        display: inline-block;
-        margin-right: 10px;
-        color: #76ff27;
-
-    }
-
     .container-aside{
         flex-wrap: wrap;
     }
+
 
     #icon-menu{
         display: flex;
 
     }
 
+    nav > ul{
+        flex-direction: column;
+        background-color: #23421a;
+        position: fixed;
+        left: 0;
+        top: 80px;
+        width: 100%;
+        height: 0px;
+        transition: all 300ms ease;
+        z-index: 100;
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    nav > ul > li > a:hover{
+        transform: scale(1);
+    }
+
+    nav ul li ul{
+        left: 90px;
+    }
+
+    nav > ul > li:hover ul{
+        top: 50px;
+    }
+
+    nav > ul > li:first-child a{
+        background-position: 20px;
+    }
+
+    #selected{
+        transform: scale(1);
+        display: flex;
+    }
+
+    #label__check{
+        display: block;
+    }
+
+
+    #check__menu:checked ~ nav > ul{
+        height: 300px;
+        visibility: visible;
+        opacity: 1;
+    }
+
+    nav > ul > li > a:hover{
+        transform: scale(1.1);
+        background: #05240a;
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+    }
+
+    
+
+
 }
+
+
+/** Cubos de decoracion **/
+
+.triangle{
+    width: 300px;
+    height: 300px;
+    background: red;
+    position: absolute;
+   
+   }
+   
+   .triangle1{
+       width: 250px;
+       height: 250px;
+       background: linear-gradient(to left, #4ec7ff, #06568b);
+       right: 100px;
+       top: 250px;
+       animation: t1 8s ease infinite;
+   }
+   
+   .triangle2{
+       width: 200px;
+       height: 200px;
+       background: linear-gradient(to left, #e6810e, #c71e1e);
+       top: 350px;
+       animation: t2 9s ease infinite;
+   }
+   
+   
+   .triangle3{
+       width: 300px;
+       height: 300px;
+       background: linear-gradient(to left, #76e60e, #047e0a);
+       top: 80px;
+       left: 200px;
+       animation: t3 7s ease infinite;
+   }
+   
+   @keyframes t1 {
+       0%{
+           transform:  rotate(45deg) translateY(0px);
+       }
+       50%{
+           transform: rotate(45deg)  translateY(20px);
+   
+       }
+       100%{
+           transform: rotate(45deg)  translateY(0px);
+       }
+       
+   }
+   
+   @keyframes t2 {
+       0%{
+           transform: rotate(65deg)  translateY(0px);
+       }
+       50%{
+           transform: rotate(65deg)  translateY(20px);
+   
+       }
+       100%{
+           transform: rotate(65deg)  translateY(0px);
+       }
+       
+   }
+   
+   @keyframes t3 {
+       0%{
+           transform: rotate(85deg)  translateY(0px);
+       }
+       50%{
+           transform: rotate(85deg)  translateY(20px);
+   
+       }
+       100%{
+           transform: rotate(85deg)  translateY(0px);
+       }
+       
+   }
 
 
 
@@ -722,82 +882,6 @@ footer .redes-footer .fa-instagram:hover{
     z-index: -1;
 }
 
-.triangle{
- width: 300px;
- height: 300px;
- background: red;
- position: absolute;
-
-}
-
-.triangle1{
-    width: 250px;
-    height: 250px;
-    background: linear-gradient(to left, #4ec7ff, #06568b);
-    right: 100px;
-    top: 250px;
-    animation: t1 8s ease infinite;
-}
-
-.triangle2{
-    width: 200px;
-    height: 200px;
-    background: linear-gradient(to left, #e6810e, #c71e1e);
-    top: 350px;
-    animation: t2 9s ease infinite;
-}
-
-
-.triangle3{
-    width: 300px;
-    height: 300px;
-    background: linear-gradient(to left, #76e60e, #047e0a);
-    top: 80px;
-    left: 200px;
-    animation: t3 7s ease infinite;
-}
-
-@keyframes t1 {
-    0%{
-        transform:  rotate(45deg) translateY(0px);
-    }
-    50%{
-        transform: rotate(45deg)  translateY(20px);
-
-    }
-    100%{
-        transform: rotate(45deg)  translateY(0px);
-    }
-    
-}
-
-@keyframes t2 {
-    0%{
-        transform: rotate(65deg)  translateY(0px);
-    }
-    50%{
-        transform: rotate(65deg)  translateY(20px);
-
-    }
-    100%{
-        transform: rotate(65deg)  translateY(0px);
-    }
-    
-}
-
-@keyframes t3 {
-    0%{
-        transform: rotate(85deg)  translateY(0px);
-    }
-    50%{
-        transform: rotate(85deg)  translateY(20px);
-
-    }
-    100%{
-        transform: rotate(85deg)  translateY(0px);
-    }
-    
-}
 
 .container-cards{
     margin-top: 80px;
@@ -1276,3 +1360,31 @@ footer .redes-footer .fa-instagram:hover{
    .container__search{
     margin-top: 80px;
    }
+
+
+
+   /*Boton de ir arriba*/
+
+#button-up{
+    width: 60px;
+    height: 60px;
+    background: #099c42;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: 50%;
+    font-size: 20px;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    cursor: pointer;
+    border: 4px solid transparent;
+    transition: all 300ms ease;
+    transform: scale(0);
+}
+
+#button-up:hover{
+    transform: scale(1.1);
+    border-color: rgba(0,0,0,0.1);
+}
