--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -306,6 +306,10 @@ header{
         display: none;
     }
 
+    .logo-header{
+        font-size: 15px;
+    }
+
 }
 
 /** icon menu pantalla chica**/
@@ -686,15 +690,16 @@ nav > ul > li > a{
     font-size: 20px;
     color: white;
     cursor: pointer;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     display: none;
     align-items: center;
     justify-content: center;
     background: #777777;
     border-radius: 50%;
-    padding: 5px 5px;
+    padding: 10px 10px;
     margin-top: 50%;
+    top: 50px;
 }
 
 #label__check{
@@ -767,7 +772,6 @@ nav > ul > li > a{
     #label__check{
         display: block;
     }
-
 
     #check__menu:checked ~ nav > ul{
         height: 300px;
@@ -1344,15 +1348,11 @@ nav > ul > li > a{
     border-radius: 5px;
    
    
-   
    }
    
    
    .paginas:hover {
        opacity:0.5;
-   
-   
-   
    
    }
 
@@ -1388,3 +1388,24 @@ nav > ul > li > a{
     transform: scale(1.1);
     border-color: rgba(0,0,0,0.1);
 }
+
+
+/** Boton modo obscuro**/
+
+#label {
+    position: absolute;
+    top: 5px;
+    right: 65px;
+    font-size: 3em;
+    color: rebeccapurple;
+    cursor: pointer;
+  }
+  #toggle {
+    display: none;
+  }
+  .oscuro {
+    background-color: #333;
+    color: rgb(80, 80, 80);
+    transition: all 1.5s ease;
+  }
+  
