--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -270,6 +270,7 @@ header{
     justify-content: center;
     align-items: center;
     position: relative;
+    
 }
 
 .menu-selected:before{
@@ -285,6 +286,7 @@ header{
 .menu nav ul li a{
     color: #777777;
     transition: color 300ms;
+    text-decoration: none;
 }
 
 .menu nav ul li a:hover{
@@ -499,6 +501,7 @@ article img{
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    text-decoration: none;
 }
 
 .container-icons .icons-plants .icon-planta{
@@ -547,6 +550,8 @@ article img{
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    text-decoration: none;
+    
 }
 
 
@@ -561,6 +566,7 @@ article img{
     align-items: center;
     border-radius: 100%;
     color: #a1f173;
+    text-decoration: none;
 }
 
 
@@ -959,6 +965,11 @@ nav > ul > li > a{
     color: #fff;
     letter-spacing: 0.5px;
     text-shadow: 5px 1px 7px rgb(0, 0, 0);
+    
+}
+
+.card p a{
+    text-decoration: none;
 }
 
 .card hr{
@@ -1409,3 +1420,120 @@ nav > ul > li > a{
     transition: all 1.5s ease;
   }
   
+
+
+
+  .content{
+    margin-top: 100px;
+  }
+
+
+  .container {
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5em;
+}
+
+.contact-info ul {
+    list-style: none;
+    padding: 0;
+}
+
+.content .logo {
+    text-align: center;
+    font-size: 3em;
+}
+
+.content .logo span {
+    color: #0eb72a;
+}
+
+.contact-wrapper {
+    box-shadow: 0 0 20px 0 rgba(255, 255, 255, .3);
+}
+
+.contact-wrapper > * {
+    padding: 1em;
+}
+
+.contact-form {
+    background: rgba(0, 0, 0, 0.753);
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
+
+}
+
+.contact-form form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contact-form form label {
+    display: block;
+}
+
+.contact-form form p {
+    margin: 0;
+    padding: 1em;
+    color: white;
+}
+
+.contact-form form .block {
+    grid-column: 1 / 3;
+}
+
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
+    width: 100%;
+    padding: .7em;
+    border: none;
+    background: none;
+    outline: 0;
+    color: #fff;
+    border-bottom: 1px solid #30d667;
+}
+
+.contact-form form button {
+    background: #063802;
+    border: 0;
+    text-transform: uppercase;
+    padding: 1em;
+}
+
+.contact-form form button:hover,
+.contact-form form button:focus {
+    background: #35d630;
+    color: #fff;
+    transition: background-color 1s ease-out;
+    outline: 0;
+}
+
+/* CONTACT INFO */
+.contact-info {
+    background: #000;
+    color: white;
+}
+
+.contact-info h4, .contact-info ul, .contact-info p {
+    text-align: center;
+    margin: 0 0 1rem 0;
+}
+
+/* LARGE SIZE */
+@media(min-width: 700px) {
+
+    .contact-wrapper {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+    .contact-wrapper > * {
+        padding: 2em;
+    }
+    .contact-info h4,
+    .contact-info ul,
+    .contact-info p {
+        text-align: left;
+    }
+}  
