--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -301,18 +301,6 @@ header{
     display: none;
 }
 
-/** Quitar icono de header en pantalla chica **/
-@media screen and (max-width: 800px){
-
-    .logo-header img{
-        display: none;
-    }
-
-    .logo-header{
-        font-size: 15px;
-    }
-
-}
 
 /** icon menu pantalla chica**/
 
@@ -412,12 +400,12 @@ article{
     box-shadow: -10px 0 20px -30px black;
     position: relative;
     border-radius: 6px;
-    position: relative;
     overflow: hidden;
     background: rgba(0, 0, 0, 0.575);
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
 }
+
 
 article:before{
     content: '';
@@ -719,84 +707,6 @@ nav > ul > li > a{
 }
 
 
-@media screen and (max-width: 800px){
-
-
-    .container-all-items{
-        transition: all 300ms;
-    }
-
-    .move-container-all-items{
-        transform: translateX(300px);
-    }
-
-    .container-aside{
-        flex-wrap: wrap;
-    }
-
-
-    #icon-menu{
-        display: flex;
-
-    }
-
-    nav > ul{
-        flex-direction: column;
-        background-color: #23421a;
-        position: fixed;
-        left: 0;
-        top: 80px;
-        width: 100%;
-        height: 0px;
-        transition: all 300ms ease;
-        z-index: 100;
-        opacity: 0;
-        visibility: hidden;
-    }
-
-    nav > ul > li > a:hover{
-        transform: scale(1);
-    }
-
-    nav ul li ul{
-        left: 90px;
-    }
-
-    nav > ul > li:hover ul{
-        top: 50px;
-    }
-
-    nav > ul > li:first-child a{
-        background-position: 20px;
-    }
-
-    #selected{
-        transform: scale(1);
-        display: flex;
-    }
-
-    #label__check{
-        display: block;
-    }
-
-    #check__menu:checked ~ nav > ul{
-        height: 300px;
-        visibility: visible;
-        opacity: 1;
-    }
-
-    nav > ul > li > a:hover{
-        transform: scale(1.1);
-        background: #05240a;
-        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
-    }
-
-    
-
-
-}
-
-
 /** Cubos de decoracion **/
 
 .triangle{
@@ -997,6 +907,7 @@ nav > ul > li > a{
 
 /** Muesta de planta **/
 
+
 .container-plant{
     margin-top: 100px;
     width: 100%;
@@ -1110,23 +1021,6 @@ nav > ul > li > a{
 }
 
 
-@media screen and (max-width: 800px){
-    
-.loader-container{
-    position:relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 400px;
-    height: 400px;
-    margin: 10px;
-}
-}
-
-
-
-
-
 
 /** Subida de imagenes multiples **/
 
@@ -1148,14 +1042,6 @@ nav > ul > li > a{
 .container__log{
     margin-top: 150px;
     justify-content: center;
-}
-
-@media screen and (max-width: 800px){
-    .login_box{
-        width: 100%;
-        height: auto;
-        margin-left: -20px;
-    }
 }
 
 
@@ -1531,8 +1417,171 @@ nav > ul > li > a{
     margin: 0 0 1rem 0;
 }
 
-/* LARGE SIZE */
-@media(min-width: 700px) {
+
+.container__gallery{
+    width: 100%;
+    height: auto;
+    margin-top: 90px;
+}
+
+
+.container__busqueda{
+    background: rgba(0, 0, 0, 0.315);
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
+    border-radius: 5px;
+    color: #ffffff;
+}
+
+
+
+
+/** Mobil **/
+
+@media screen and (max-width: 750px){
+
+
+    /** Visualizar la planta **/
+
+    .container-plant article{
+        width: 100%;
+        padding: 20px;
+        margin-top: 20px;
+        padding-bottom: 80px;
+        position: relative;
+        border-radius: 10px;
+        background: rgba(0, 0, 0, 0.575);
+        backdrop-filter: blur(7px);
+        -webkit-backdrop-filter: blur(7px);
+        justify-content:center;
+    }
+
+    .container-plant article .container-img-planta{
+        border-radius: 44px;
+        overflow: hidden;
+        width: 100%;
+        height:fit-content;
+    }
+
+    .container-plant article .container-info-planta{
+        width: 100%;
+        color: white;
+    }
+
+    .container-plant article h1{
+        text-align: center;
+        font-size: 35px;
+    }
+
+    .container-plant article h2{
+        font-size: 30px;
+    }
+
+
+        /** Header **/
+
+    /** Logo **/
+    .logo-header img{
+        display: none;
+    }
+
+    .logo-header h1{
+        font-size: 30px;
+    }
+
+    /** Menu **/
+
+    .container-all-items{
+        transition: all 300ms;
+    }
+
+    .move-container-all-items{
+        transform: translateX(300px);
+    }
+
+    .container-aside{
+        flex-wrap: wrap;
+    }
+
+
+    #icon-menu{
+        display: flex;
+
+    }
+
+    nav > ul{
+        flex-direction: column;
+        background-color: #23421a;
+        position: fixed;
+        left: 0;
+        top: 80px;
+        width: 100%;
+        height: 0px;
+        transition: all 300ms ease;
+        z-index: 100;
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    nav > ul > li > a:hover{
+        transform: scale(1);
+    }
+
+    nav ul li ul{
+        left: 90px;
+    }
+
+    nav > ul > li:hover ul{
+        top: 50px;
+    }
+
+    nav > ul > li:first-child a{
+        background-position: 20px;
+    }
+
+    #selected{
+        transform: scale(1);
+        display: flex;
+    }
+
+    #label__check{
+        display: block;
+    }
+
+    #check__menu:checked ~ nav > ul{
+        height: 300px;
+        visibility: visible;
+        opacity: 1;
+    }
+
+    nav > ul > li > a:hover{
+        transform: scale(1.1);
+        background: #05240a;
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+    }
+        /** FIN Header **/
+
+    /** Login **/
+
+    .login_box{
+        width: 100%;
+        height: auto;
+        margin-left: -20px;
+    }
+
+    /** Loadder **/
+
+    .loader-container{
+        position:relative;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 400px;
+        height: 400px;
+        margin: 10px;
+    }
+
+    /** Contacto **/
 
     .contact-wrapper {
         display: grid;
@@ -1546,4 +1595,14 @@ nav > ul > li > a{
     .contact-info p {
         text-align: left;
     }
-}  
+
+
+    /** Pagina principal **/
+
+    .container-content .container-icons .icons-plants{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        height: auto;
+    }
+}
