--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -1,8 +1,14 @@
+/* Importing fonts from Google */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
     text-decoration: none;
     font-family: 'Source Code Pro', monospace;
+}
+
+h4,h3,h2,h1{
+    text-decoration: none;
 }
 
 /** Slider inicio - galeria de imagenes de la pagina principal**/
@@ -495,14 +501,19 @@ article img{
 .container-icons .icons-plants .icon-planta{
     font-size: 120px;
     margin: 150px;
-    background: #efefef;
     width: 50px;
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 100%;
-    color: #a1f173;
+    color: #a1f173; 
+    text-decoration: none;
+}
+
+.container-icons .icons-plants a h4{
+    text-decoration: none;
+
 }
 
 
@@ -806,13 +817,14 @@ nav > ul > li > a{
 .container-cards{
     margin-top: 80px;
     width: 100%;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     top: 50%;
 }
 
-.card{
+.cardd{
     width: 300px;
     margin: 10px;
     padding: 20px;
@@ -826,11 +838,11 @@ nav > ul > li > a{
     transition: all 300ms;
 }
 
-.card:hover .cover__card{
+.cardd:hover .cover__card{
     transform: scale(1.1);
 }
 
-.card:hover{
+.cardd:hover{
     transform: translateY(-10px);
 }
 
@@ -857,7 +869,7 @@ nav > ul > li > a{
 }
 
 
-.card h2{
+.cardd h2{
     font-size: 20px;
     font-weight: 400;
     margin-top: 20px;
@@ -868,7 +880,7 @@ nav > ul > li > a{
 
 }
 
-.card p{
+.cardd p{
     margin-top: 10px;
     font-size: 14px;
     font-weight: 300;
@@ -878,11 +890,11 @@ nav > ul > li > a{
     
 }
 
-.card p a{
+.cardd p a{
     text-decoration: none;
 }
 
-.card hr{
+.cardd hr{
     margin-top: 30px;
     border: none;
     height: 0.2px;
@@ -968,8 +980,8 @@ nav > ul > li > a{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     margin: 10px;
     margin-top: 50px;
     margin-left: 500px;
@@ -1036,8 +1048,113 @@ nav > ul > li > a{
 
 }
 
+/** Login nuevo **/
+
+.backgroun_log{
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url(../img/fondo.jpg);
+    position:absolute;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: -80px;
+}
+
+
+.container_log{
+    margin-top: 130px;
+}
+
+.wrapper {
+    max-width: 350px;
+    min-height: 500px;
+    margin: 80px auto;
+    padding: 40px 30px 30px 30px;
+    background: rgba(255, 255, 255, 0.603);
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
+    border-radius: 15px;
+    box-shadow: 13px 13px 20px #38393a, -13px -13px 20px #2e2d2dab;
+}
+
+.wrapper .logo {
+    width: 80px;
+    margin: auto;
+}
+
+.wrapper .logo img {
+    width: 100%;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0px 0px 3px #5f5f5f,
+        0px 0px 0px 5px #ecf0f3,
+        8px 8px 15px #a7aaa7,
+        -8px -8px 15px #fff;
+}
+
+.wrapper .name {
+    font-weight: 600;
+    font-size: 1.4rem;
+    letter-spacing: 1.3px;
+    padding-left: 10px;
+    color: #555;
+}
+
+.wrapper .form-field input {
+    width: 100%;
+    display: block;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.2rem;
+    color: #666;
+    padding: 10px 15px 10px 10px;
+    /* border: 1px solid red; */
+}
+
+.wrapper .form-field {
+    padding-left: 10px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
+}
+
+.wrapper .form-field .fas {
+    color: #555;
+}
+
+.wrapper .btn {
+    box-shadow: none;
+    width: 100%;
+    height: 40px;
+    background-color: #03f437;
+    color: #fff;
+    border-radius: 25px;
+    box-shadow: 3px 3px 3px #b1b1b1,
+        -3px -3px 3px #fff;
+    letter-spacing: 1.3px;
+}
+
+.wrapper .btn:hover {
+    background-color: #039BE5;
+}
+
+.wrapper a {
+    text-decoration: none;
+    font-size: 0.8rem;
+    color: #03A9F4;
+}
+
+.wrapper a:hover {
+    color: #039BE5;
+}
 
 /** Login**/
+
+
 
 .container__log{
     margin-top: 150px;
@@ -1161,12 +1278,86 @@ nav > ul > li > a{
 }
 
 
+/** Nuevo perfil **/
+
+.perfil{
+    margin-top: 100px;
+}
+
+.container .row .col-md-7 .card{
+    border:none;
+
+    position:relative;
+    overflow:hidden;
+    border-radius:8px;
+    cursor:pointer;
+}
+
+.container .row .col-md-7 .card:before{
+    
+    content:"";
+    position:absolute;
+    left:0;
+    top:0;
+    width:4px;
+    height:100%;
+    background-color:#c6e7be;
+    transform:scaleY(1);
+    transition:all 0.5s;
+    transform-origin: bottom
+}
+
+.container .row .col-md-7 .card:after{
+    
+    content:"";
+    position:absolute;
+    left:0;
+    top:0;
+    width:4px;
+    height:100%;
+    background-color:#34aa24;
+    transform:scaleY(0);
+    transition:all 0.5s;
+    transform-origin: bottom
+}
+
+.container .row .col-md-7 .card:hover::after{
+    transform:scaleY(1);
+}
+
+
+.fonts{
+    font-size:11px;
+}
+
+
+
+.buttons button:nth-child(1){
+       border:1px solid #2faa24 !important;
+       color:#ffffff;
+       height:40px;
+}
+
+.buttons button:nth-child(1):hover{
+       border:1px solid #43aa24 !important;
+       color:#fff;
+       height:40px;
+       background-color:#4eaa24;
+}
+
+.buttons button:nth-child(2){
+       border:1px solid #29aa24 !important;
+       background-color:#34aa24;
+       color:#fff;
+        height:40px;
+}
+
 
 /** Registro de planta **/
 
 .form-register-plant{
     width: 700px;
-    height: 1300px;
+    height: 1400px;
     background: rgba(0, 0, 0, 0.575);
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
@@ -1221,21 +1412,23 @@ nav > ul > li > a{
     border: none;
     outline: none;
     height: 40px;
+    width: 100px;
     background: #00ff0d;
     color: #ffffff;
     font-size: 18px;
-    border-radius: 20px;
+    border-radius: 10px;
     
 }
 
 .form-register-plant .btn-secondary{
     border: none;
     outline: none;
-    height: 40px;
+    height: 42px;
+    width: 100px;
     background: #ff0000;
     color: #ffffff;
     font-size: 18px;
-    border-radius: 20px;
+    border-radius: 10px;
     
 }
 
@@ -1434,7 +1627,11 @@ nav > ul > li > a{
 }
 
 
-
+.search-bar .col-12 .container__busqueda{
+    width: 50%;
+    height: auto;
+    margin-top: 90px;
+}
 
 /** Mobil **/
 
@@ -1604,5 +1801,11 @@ nav > ul > li > a{
         flex-wrap: wrap;
         width: 100%;
         height: auto;
+    }
+
+    /** Registro de plantas **/
+
+    .form-register-plant{
+        width: 100%;
     }
 }
